syntax = "proto3";

import "google/protobuf/empty.proto";

package auth;

service AuthService {
  rpc Register(RegisterRequest) returns (google.protobuf.Empty);
  rpc Login(LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string confirmPassword = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}
